Initial steel thread

--- a/docs/3. Steel_Thread.md
+++ b/docs/3. Steel_Thread.md
@@ -1,31 +1,105 @@
-Based on @2. Bank_Statements_app_overview.md, implement a steel thread for the project.
+# Steel Thread Implementation Plan
 
-It should include:
+## 1. Project Structure
 
-- A database with a transaction table
-- An API endpoint to create a transaction
-- An API endpoint to read all transactions (no filter, no paging)
-- A React page to display the transactions (no filter, no paging)
+**Monorepo**
+- `bank-statements-api/` (FastAPI backend)
+- `bank-statements-web/` (React frontend)
+- `infra/` (deployment, CI/CD, config)
 
+---
 
-It should not include
+## 2. Database
 
-- Authentication / Authorization
+**Table: `transaction`**
+- `id`: UUID, primary key
+- `date`: date
+- `description`: text
+- `amount`: Decimal
+
+**Environments:**
+- **Development:** Neon DB
+- **Testing:** Neon branch (from a given database))
+- **Production:** Render PostgreSQL
+
+---
+
+## 3. Backend (FastAPI)
+
+- Use `src/` for code
+- Use `pyproject.toml` for config, `pip` for deps, `pytest` for tests
+
+**Endpoints:**
+- `POST /transactions` — create a transaction (accepts JSON body)
+- `GET /transactions` — list all transactions (returns JSON array)
+
+**Testing:**
+- Unit and integration tests in `tests/`
+- Use test D, branched from a given database
+
+---
+
+## 4. Frontend (React + Vite + TypeScript)
+
+- Use `src/` for code, `tests/` for jest/unit tests
+- Page: `/transactions`
+  - Fetches and displays all transactions in a table
+
+**Testing:**
+- Unit: jest
+- E2E: Playwright (mock backend or use test DB branch)
+
+---
+
+## 5. Environments & Config
+
+- `.env` files for each environment (dev, test, prod) in both backend and frontend
+- DB URL, API URL, etc. managed per environment
+
+---
+
+## 6. CI/CD
+
+- **GitHub Actions:**
+  - Lint, type check, run all tests (backend & frontend)
+  - Use Neon test branch for backend integration tests
+  - Build frontend, run jest and Playwright tests
+
+- **Deployment:**
+  - `render.yaml` for backend, frontend, and DB provisioning on Render
+  - Auto-deploy main branch to production
+
+---
+
+## 7. Deliverables
+
+- Minimal code for:
+  - Transaction table migration
+  - FastAPI endpoints
+  - React page
+  - Tests for all layers
+  - Working CI/CD config
+  - Environment setup docs
+
+---
+
+## 8. Out of Scope (for Steel Thread)
+
+- Authentication/authorization
 - File upload
 - Categorization
 - Export
 - Background tasks
 
-The app should be completely deployable and runnable.
-There should be 3 environments:
-- Development
-- Testing
-- Production
+---
 
-Database per environment:
-- Development - Use Neon
-- Testing - Use Neon branch database from a (always cleaned) one
-- Production - Use Render
+## 9. Next Steps
 
-Use github actions and/or render.yaml for CI/CD
+1. Scaffold backend and frontend folders
+2. Implement DB schema and migrations
+3. Implement backend endpoints with tests
+4. Implement frontend page with tests
+5. Set up environment configs
+6. Set up CI/CD and deployment
 
+---
